Refactor based on guide to use uv package management and mise tool

--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
+# OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
 EMBEDDING_MODEL=text-embedding-3-large
 EMBEDDING_DIMENSIONS=1024
@@ -12,3 +13,6 @@ PINECONE_INDEX_NAME=your_pinecone_index
 DEFAULT_RETRIEVAL_TOP_K=25
 DEFAULT_RERANK_TOP_N=5
 CHUNK_SIZE=512
+
+# Service Configuration
+DEBUG=False
