Use local cross-encoder for reranking. Fallback to use chatgpt

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ PINECONE_INDEX_NAME=your_pinecone_index
 DEFAULT_RETRIEVAL_TOP_K=25
 DEFAULT_RERANK_TOP_N=5
 CHUNK_SIZE=512
+
+USE_CROSS_ENCODER=true
+CROSS_ENCODER_MODEL=BAAI/bge-reranker-large
+DEVICE=cpu
+RERANK_BATCH=16
+LLM_FALLBACK_THRESHOLD=6.5
