--- a/env.example
+++ b/env.example
@@ -16,3 +16,9 @@ CHUNK_SIZE=512
 
 # Service Configuration
 DEBUG=False
+
+USE_CROSS_ENCODER=true
+CROSS_ENCODER_MODEL=BAAI/bge-reranker-large
+DEVICE=cpu
+RERANK_BATCH=16
+LLM_FALLBACK_THRESHOLD=5.0
