--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-multipart>=0.0.6,<0.1.0",
     "httpx>=0.25.0,<0.26.0",
     "gunicorn>=21.2.0,<22.0.0",
+    "sentence-transformers>=2.5.1",
 ]
 
 [dependency-groups]
