Enhance LanceDB integration and update configurations
- Added `.lancedb` to `.gitignore` to exclude local database files.
- Updated `env.example` to reflect new LanceDB configuration parameters.
- Adjusted `app/core/settings.py` to ignore extra fields in the environment configuration.
- Enhanced `app/services/embedding.py` to ensure all schema fields are present with defaults during upsert operations, improving data integrity.

--- a/env.example
+++ b/env.example
@@ -5,9 +5,9 @@ EMBEDDING_DIMENSIONS=1024
 RERANK_MODEL=gpt-4o-mini
 ANSWER_MODEL=gpt-4o
 
-# Pinecone Configuration
-PINECONE_API_KEY=your_pinecone_api_key
-PINECONE_INDEX_NAME=your_pinecone_index
+# LanceDB Configuration
+LANCEDB_TABLE_NAME=my_table
+LANCEDB_DATABASE_PATH=./.lancedb
 
 # Retrieval Configuration
 DEFAULT_RETRIEVAL_TOP_K=25
